<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include_main"
        layout="@layout/header_layout" />

    <Button
        android:id="@+id/btn_close_shift"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/ptt_blue"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/close_shift"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_main" />

    <Button
        android:id="@+id/btn_close_day"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/ptt_blue"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/close_day"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_main" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/product"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_main" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:scrollbars="vertical"
        android:layout_marginTop="15dp"
        android:footerDividersEnabled="false"
        android:numColumns="2"
        android:padding="2dp"
        android:paddingBottom="10dp"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:background="@color/ptt_blue"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/logout"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_summary"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:background="@color/ptt_blue"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/bill_summary"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>