<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/shift"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/datePicker1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="90dp"
        android:fontFamily="@font/prompt_regular"
        android:text="@string/date_month_year"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/datePicker1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.694" />

    <include
        android:id="@+id/include_report"
        layout="@layout/header_layout" />


    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@color/ptt_blue"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_report" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_regular"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="25dp"/>

    </LinearLayout>

    <!--    <TextView-->
<!--        android:id="@+id/textView7"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="76dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:fontFamily="@font/prompt_regular"-->
<!--        android:text="@string/year"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

<!--    <Spinner-->
<!--        android:id="@+id/spinner_year"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginTop="52dp"-->
<!--        android:layout_marginEnd="84dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

<!--    <Spinner-->
<!--        android:id="@+id/spinner_shift"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="84dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/spinner_day" />-->

<!--    <Spinner-->
<!--        android:id="@+id/spinner_month"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="84dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/spinner_year" />-->

<!--    <Spinner-->
<!--        android:id="@+id/spinner_day"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="84dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/spinner_month" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="76dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:fontFamily="@font/prompt_regular"-->
<!--        android:text="@string/day"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView4" />-->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/prompt_regular"
        android:orientation="horizontal"
        android:text="@string/bill_summary"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_report" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/datePicker1"
        app:layout_constraintTop_toTopOf="@+id/datePicker1" />

    <Button
        android:id="@+id/btn_print_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ptt_blue"
        android:text="@string/print"
        android:fontFamily="@font/prompt_regular"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>